src/test/ui/issues/issue-24204.stderr
error[E0271]: type mismatch resolving `<<T as Trait>::A as MultiDispatch<i32>>::O == T`
  --> $DIR/issue-24204.rs:14:12
   |
LL | trait Trait: Sized {
   |       ----- required by a bound in this
LL |     type A: MultiDispatch<Self::B, O = Self>;
   |                                    -------- required by this bound in `Trait`
...
LL | fn test<T: Trait<B=i32>>(b: i32) -> T where T::A: MultiDispatch<i32> { T::new(b) }
   |            ^^^^^^^^^^^^ expected associated type, found type parameter `T`
   |
   = note: expected associated type `<<T as Trait>::A as MultiDispatch<i32>>::O`
               found type parameter `T`
   = note: you might be missing a type parameter or trait bound

error: aborting due to previous error

For more information about this error, try `rustc --explain E0271`.
